--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 </head>
 <body>
+    <h1 class="h1 ">Dynamic Table</h1>
     <input type="text" id="columnName" placeholder="Enter column name">
     <button type="button" class="btn btn-primary" id="addColumn">Add Column</button>
     <button type="button" class="btn btn-primary" id="addRow">Add Row</button>
     
-    <table class="table" id="myTable">
+    <table class="table" id="unique-table">
         <tr>
           <th>Actions</th>
         </tr>
