--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Dynamic table</title>
 
 </head>
-<body>
-    <h1 class="h1 ">Dynamic Table</h1>
+<body class="">
+    <h1 class="h1 shadow font-weight-light ">Dynamic Table</h1>
     <input type="text" id="columnName" placeholder="Enter column name">
     <button type="button" class="btn btn-primary" id="addColumn">Add Column</button>
     <button type="button" class="btn btn-primary" id="addRow">Add Row</button>
